<resources>
    <string name="app_name">Dialog</string>
    <string name="btnAlert">Alert</string>
    <string name="btnDate">Date</string>
    <string name="btnTime">Time</string>
    <string name="btnProgress">Progress</string>
    <string name="btnCustom">Custom</string>
    <string name="txtDef">The following snippet illustrates a simple notification that specifies an activity to open when the user clicks the notification. Notice that the code creates a TaskStackBuilder object and uses it to create the PendingIntent for the action. This pattern is explained in more detail in the section Preserving Navigation when Starting an Activity: </string>
</resources>
